--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>🕉 കാവിൽ ഭഗവതി</title>
+    <title>🕉 പാങ്ങോട് കാവിൽ ഭഗവതി</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
